--- a/document-viewer-app/Views/Home/Index.cshtml
+++ b/document-viewer-app/Views/Home/Index.cshtml
@@ -2,6 +2,13 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+
+<h1>Bienvenido a mi aplicación</h1>
+<p>Ingrese el nombre del archivo que desea descargar:</p>
+<input type="text" id="archivo" />
+<button id="btnDescargar">Descargar</button>
+
 <link href="~/node_modules/devextreme/dist/css/dx.light.css" rel="stylesheet" />
 <link href="~/node_modules/devexpress-richedit/dist/dx.richedit.css" rel="stylesheet" />
 
@@ -16,6 +23,18 @@ you should register the pdfkit library before control script registration.*@
 @*<script src="~/node_modules/devexpress-richedit/dist/pdfkit.js"></script>*@
 
 <script src="~/node_modules/devexpress-richedit/dist/dx.richedit.js"></script>
+
+@section Scripts {
+    <script>
+        const archivoInput = document.getElementById('archivo');
+        const btnDescargar = document.getElementById('btnDescargar');
+        btnDescargar.addEventListener('click', () => {
+            const nombreArchivo = archivoInput.value;
+            const urlDescarga = `https://bconnectstoragetest.blob.core.windows.net/temp/${nombreArchivo}`;
+            window.location.href = `/Home/DescargarArchivo?nombreArchivo=${nombreArchivo}&urlDescarga=${urlDescarga}`;
+        });
+    </script>
+}
 
 @(Html.DevExpress().RichEdit("richEdit")
     .Width("100%")
@@ -40,5 +59,5 @@ you should register the pdfkit library before control script registration.*@
     .Ribbon(ribbon => ribbon
         .ActiveTabIndex(0)
     )
-    .Open("Example.docx")
+    .Open("ArchivosTemporales/Documento.docx")
 )
