--- a/document-viewer-app/Views/Home/RichEdit.cshtml
+++ b/document-viewer-app/Views/Home/RichEdit.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "RichEdit";
 }
 
 <link href="~/node_modules/devextreme/dist/css/dx.light.css" rel="stylesheet" />
